--- a/Simfony/symblog/src/Blogger/BlogBundle/Resources/config/routing.yml
+++ b/Simfony/symblog/src/Blogger/BlogBundle/Resources/config/routing.yml
@@ -17,3 +17,23 @@ BloggerBlogBundle_contact:
     defaults: { _controller: BloggerBlogBundle:Page:contact }
     requirements:
         _method:  GET
+
+blogger_blog_blog_show:
+    path:  /{id}
+    defaults: { _controller: BloggerBlogBundle:Blog:show }
+    requirements:
+        _method:  GET
+        id: \d+
+
+blogger_blog_blog_create:
+    path: /create
+    defaults: { _controller: BloggerBlogBundle:Blog:create }
+    requirements:
+        _method:  GET
+
+blogger_blog_blog_edit:
+    path: /edit/{id}
+    defaults: { _controller: BloggerBlogBundle:Blog:edit }
+    requirements:
+        _method:  GET
+      
