Canvis 15/06 taula blogs_id, tags..etc

--- a/Simfony/symblog/app/config/config.yml
+++ b/Simfony/symblog/app/config/config.yml
@@ -9,6 +9,12 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+
+services:
+    twig.extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        tags:
+            - { name: twig.extension }
     
 framework:
     #esi: ~
