--- a/Simfony/symblog/src/Blogger/BlogBundle/Resources/config/routing.yml
+++ b/Simfony/symblog/src/Blogger/BlogBundle/Resources/config/routing.yml
@@ -24,6 +24,7 @@ blogger_blog_blog_show:
     requirements:
         _method:  GET
         id: \d+
+        _locale: es|en
 
 blogger_blog_blog_create:
     path: /create
@@ -36,4 +37,11 @@ blogger_blog_blog_edit:
     defaults: { _controller: BloggerBlogBundle:Blog:edit }
     requirements:
         _method:  GET
+
+blogger_blog_comment_create:
+    path:  /comment/{blog_id}
+    defaults: { _controller: BloggerBlogBundle:Comment:create }
+    requirements:
+        _method:  POST
+        blog_id: \d+
       
