--- a/Simfony/symblog/src/Blogger/BlogBundle/Resources/config/config.yml
+++ b/Simfony/symblog/src/Blogger/BlogBundle/Resources/config/config.yml
@@ -4,3 +4,5 @@ parameters:
     blogger_blog.emails.contact_email: netsergi@email.com
     blogger_blog.emails.departament.marketing: netsergi@alwaysdata.net
     blogger_blog.emails.departament.tecnic: netsergi@gmail.com
+    # Blogger máximo de comentarios recientes
+    blogger_blog.comments.latest_comment_limit: 4
